Fix spacing.

--- a/style.css
+++ b/style.css
@@ -49,11 +49,11 @@ header a:hover {
 .day-period {
     text-align: center;
     cursor: pointer;
-    font-size: 20px; /* Adjust period size */
+    font-size: 24px; /* Adjust period size */
     line-height: 2.0; /* Adjust line height for vertical centering and consistency */
     /* color: #888;  Grey color for period symbol */
     display: inline-block; /* Ensure it behaves like inline for horizontal flow */
-    width: 20px; /* Set a fixed width for each period symbol for consistent spacing */
+    width: 24px; /* Set a fixed width for each period symbol for consistent spacing */
     font-family: 'DM Sans', sans-serif; /* Use DM Sans font */
     vertical-align: middle; /* Align period symbols vertically in the middle */
 }
